--- a/server-node/package.json
+++ b/server-node/package.json
@@ -1,10 +1,12 @@
 {
   "name": "server-node",
+  "bin": "server.js",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node start.js"
   },
   "keywords": [],
   "author": "",
